added read me and other documentaions

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,21 @@
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=your-gmail@example.com
-SMTP_PASS=your-app-password
-RECIPIENTS=recipient1@example.com,recipient2@example.com,recipient3@example.com
-EMPLOYEE_NUMBER=11
-AMOUNT=1,500
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-email-password
+RECIPIENTS=recipient@example.com
+EMPLOYEE_NUMBER=12345
+AMOUNT=1000
+BANK=Your Bank
+BANK_BRANCH=Main Branch
+ACCOUNT_NO=9876543210
+SWIFT_CODE=ABCDEFGH
+BANK_CODE=123
+BRANCH_CODE=456
+NAME=Your Name
+ADDRESS_LINE_1=Street 1
+ADDRESS_LINE_2=Street 2
+CITY=Your City
+POSTAL_CODE=12345
+COUNTRY=Your Country
+BILL_TO=Client Name
+BILL_TO_ADDRESS=Client Address
